Removed text-align justify (accesssibility fix)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -919,8 +919,6 @@ input[type="date"] {
 
     line-height: 1.1;
     font-size: 1.1rem;
-
-    text-align: justify;
 }
 
 .feedback-form {
